--- a/html/infrastructure.data.gov.au.html
+++ b/html/infrastructure.data.gov.au.html
@@ -9,7 +9,7 @@
     <meta name="dcterms.type" content="Text" />
     <meta name="dcterms.publisher" content="Australian Government Linked Data Working Group" />
     <meta name="dcterms.creator" content="Nicholas Car" />
-    <meta name="dcterms.title" content="linked.data.gov.au" />
+    <meta name="dcterms.title" content="infrastructure.data.gov.au, tombstoned" />
     <meta name="dcterms.date" content="2023-06-04" />
     <meta name="dcterms.modified" content="2023-06-04" />
     <meta name="description" content="A fall-back landing page for AGLDWG-issued PIDs that no-longer resolve" />
@@ -38,10 +38,11 @@
 </header>
 
 <div id="main" style="clear:both;">
-    <h1>linked.data.gov.au</h1>
-    <h4>You have reached the homepage of the domain <code style="font-size: larger;">linked.data.gov.au</code></h4>
-    <p>This is a Persistent Identifier (PID) domain maintained by the <a href="https://www.linked.data.gov.au">Australian Government Linked Data Working Group</a> for use in <a href="https://www.w3.org/wiki/LinkedData">Linked Data</a> data and applications.</p>
-    <p>Please visit the Australian Government Linked Data Working Group's website for more information:</p>
+    <img src="style/tombstone.svg" alt="tombstone ico" />
+    <h1>infrastructure.data.gov.au, tombstoned</h1>
+    <h4>The domain <code style="font-size: larger;">infrastructure.data.gov.au</code> was once a Persistent Identifier (PID) domain that was used to create test PIDs, 2018 - 2022.</h4>
+    <p>This domain is no longer used and all PIDs associated with it are no longer expected to resolve.</p>
+    <p>If you wish to find/create/understand Australian Government PIDs, like those made for <code>infrastructure.data.gov.au</code>, please visit the Australian Government Linked Data Working Group's website:</p>
     <ul>
         <li><a href="https://www.linked.data.gov.au">https://www.linked.data.gov.au</a></li>
     </ul>
