Get all tombstone pages working
Fix up all the tombstone pages.
Have the conf files redirect to the correct URLs,
now that they work with the hostname instead of
the IP address.

Fix the favico elements.

Have all the image links local, rather than
going off to GitHub pages.

--- a/html/broken.html
+++ b/html/broken.html
@@ -4,7 +4,7 @@
     <title>AGLDWG</title>
     <meta charset="utf-8" />
 
-    <link rel="favicon" type="image/png" href="style/img/agldwg-logo.ico" />
+    <link rel="icon" href="style/img/agldwg-logo.ico" />
     <link rel="stylesheet" type="text/css" href="style/agldwg-ochre.css" />
 </head>
 <body>
