fixe HTML pages

--- a/html/tombstoned.html
+++ b/html/tombstoned.html
@@ -39,14 +39,9 @@
 
 <div id="main" style="clear:both;">
     <img src="style/img/tombstone.svg" alt="tombstone ico" />
-    <h1>environment.data.gov.au, tombstoned</h1>
-    <h4>The domain <code style="font-size: larger;">environment.data.gov.au</code> was once a Persistent Identifier (PID) domain that was used to create PIDs for several <a href="https://csiro.au">CSIRO</a> projects in 2018 - 2022.</h4>
-    <p>This domain is no longer used and all PIDs associated with it are no longer expected to resolve.</p>
-    <p>If you are seeing this page, you might have clicked on a <code>environment.data.gov.au</code> PID link in data or a web page, and you've come here.</p>
-    <p>If you wish to find/create/understand Australian Government PIDs, like those made for <code>environment.data.gov.au</code>, please visit the Australian Government Linked Data Working Group's website:</p>
-    <ul>
-        <li><a href="https://www.linked.data.gov.au">https://www.linked.data.gov.au</a></li>
-    </ul>
+    <h1>tombstoned</h1>
+    <p>The Persistent Identifier (PID) you requested is no longer resolving to any target data or system.</p>
+    <p>If you wish to find out more about this resource, please either contact the peopel/organisation you believe to be its owner or contact the <a href="https://www.linked.data.gov.au">Australian Government Linked Data Working Group</a> who maintain the system this PID was created within.</p>
 </div> <!-- main_content -->
 
 <footer>
